--- a/app/src/style/scrollbar.css
+++ b/app/src/style/scrollbar.css
@@ -1,21 +1,22 @@
-.scrollbar::-webkit-scrollbar {
-    display: block;
-    width: 6px;
-    height: 6px;
+.scrollbar {
+    overflow-y: hidden !important;
 }
 
-.scrollbar::-webkit-scrollbar-track {
-    border-radius: 3px;
-    background-color: rgba(0, 0, 0, 0.06);
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
+.scrollbar:hover {
+    overflow-y: auto !important;
+}
+
+.scrollbar::-webkit-scrollbar {
+    display: block;
+    width: 5px;
+    height: 5px;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
     border-radius: 3px;
-    background-color: rgba(0, 0, 0, 0.12);
-    -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #aaa;
+    background-color: rgba(0, 0, 0, 0.4);
 }
